data/derived/fa15/progs/unify/prog3332.ml.out
Characters 55-64:
  |h::t -> (h*.h)::t;;
           ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
